# IndFood-Image-Classification

./: .gitattributes  .gitignore  Dockerfile  README.md  app.py  main.py  pyproject.toml  requirements.txt  requirements_uv.txt
data/: README.md
k8s/: deployment.yaml  hpa.yaml  service.yaml
models/: food_classifier_convnexts_v2.onnx  food_cnext_v33_38_0.838.pth  food_effnet_v23_40_0.707.pth  food_mobilenet_v12_19_0.623.pth  food_resnet_v42_12_0.887.pth  resnet152.pth
notebooks/: Dataset Analysis.ipynb  Model Testing.ipynb  Model Training ConvNeXT-S.ipynb  Model Training EfficientNet-V2-Small.ipynb  Model Training MobileNetV2.ipynb  Model Training ResNet152.ipynb  dataset_taxonomy.csv
src/scripts/: model.py  predict.py  serve.py  train.py
templates/: index.html
tests/: load_test.py  test.py
