[project]
name = "indfood-image-classification"
version = "0.1.0"
description = "A cnn based food image classification project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "python-multipart>=0.0.21",
    "requests>=2.32.5",
    "onnxruntime>=1.23.2",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "torchsummary>=1.5.1",
]
frontend = [
    "streamlit>=1.53.0",
]
